# emp-tool

./: CMakeLists.txt  CMakeLists.txt_bak  README.md
cmake/: common.cmake  emp-tool-config.cmake
compiler_test/: rdseed_instruction_test.c
emp-tool/: emp-tool.cpp  emp-tool.h
emp-tool/circuits/: batcher.cpp  bit.cpp  circuit_file.h  float_circuit.cpp  integer.cpp  integer_utils.cpp  integer_utils.h
emp-tool/execution/: circuit_execution.h  plain_circ.h  plain_prot.h  protocol_execution.h
emp-tool/garble/: aes.h  garble_aes.h  garble_gate_halfgates.h  garble_gate_privacy_free.h  garble_gate_standard.h  openssl_aes.cpp  openssl_aes.h
emp-tool/gc/: backend.cpp  backend.h  garble_circuit.h  halfgate_eva.h  halfgate_gen.h  privacy_free_eva.h  privacy_free_gen.h
emp-tool/io/: abandon_io_channel.h  check_io_channel.h  file_io_channel.h  hash_io_channel.h  io_channel.cpp  io_channel.cpp__  io_channel.h  io_channel.h__  mem_io_channel.h  net_io_channel.h
emp-tool/utils/: block_utils.cpp  block_utils.h  com.h  hash.h  kdf.cpp  kdf.h  miracl_hash.cpp  miracl_hash.h  miracl_otnp_utils.h  miracl_utils.cpp  miracl_utils.h  pb_utils.cpp  pb_utils.h  prg.h  prp.h  sm2_params.cpp  sm2_params.h  sse.cpp  sse.h  utils.cpp  utils.h  utils.hpp  utils_ec.cpp  utils_ec.h  xor_tree.h
include/: batcher.h  bit.h  block.h  constants.h  emp-tool-miracl.def  emp-tool-relic.def  emp-tool.def  float_circuit.h  integer.h  number.h  swappable.h
test/: bit.cpp  com.cpp  float.cpp  garble.cpp  gen_circuit.cpp  hash.cpp  int.cpp  prg.cpp
